--- a/Session_5_Serology_data.Rmd
+++ b/Session_5_Serology_data.Rmd
@@ -78,7 +78,7 @@ ggplot(example_data, aes(x=IgG_S)) +
   geom_histogram()
 ```
 
-Not that these data are **skewed data**. 
+Note that these data are **skewed data**. 
 
 Skewed refers to a type of **data distribution** where the values are not evenly distributed around the *mean*. 
 
@@ -113,7 +113,7 @@ legend('topright', c('IgG_S', 'IgA_S'),
 
 We can see the *IgA_S* has more low values and the *IgG_S* has higher values. This is not unexpected, given what we know about antibody titres and the immune system.
 
-#### Determining differences; cut offs, ROC, and test characteristics
+#### 5b - Cut offs, ROC, and test characteristics
 
 However, let's *imagine* that these are *antibodies against different viruses*, so imagine that these are both *IgG* but against different viruses. How can we know if these are different?
 
@@ -134,7 +134,7 @@ glimpse(long_data)
 
 ```
 
-Not let's plot them in ggplot:
+Now let's plot them in ggplot:
 
 ```{r}
 library(ggplot2)
@@ -200,9 +200,9 @@ plot(ecdf(data1), main = "", xlim=c(10,55))
 plot(ecdf(data2), add = TRUE, lty = "dashed")
 ```
 
-Now let's assume that these are from the same sample but the *IgA_S* with the lower titres are **naive** animals that have never has an infection (so susceptible in the modelling), and the *IgG_S* are the **immune** or if not immune **recovered** animals (recovered) that are truly **seropositive**, but we want to find the difference. 
+Now let's imagine that these antibody titres are from the same population but the *IgA_S* with the lower titres are **naive** animals that have never has an infection (so susceptible in the modelling), and the *IgG_S* are the **immune** or if not immune **recovered** animals (recovered) that are truly **seropositive**, but we want to find the difference. 
 
-You can see that some of the *"negative"* animals have titres that are higher than the *"positive"* animals. This is not uncommon. Many things determine this, such as previous infections or waning antibody titres. These lead to **false positive** and **false negative** results.
+You can see that some of the *"negative"* animals have titres that are equal or higher than the *"positive"* animals. This is not uncommon. Many things determine this, such as previous infections with related infections or waning antibody titres. These lead to **false positive** and **false negative** results.
 
 ##### Test sensitivity and specificity and predictive values
 
@@ -212,12 +212,14 @@ You can see that some of the *"negative"* animals have titres that are higher th
 
 **Specificity** is the proportion of true negative cases that are correctly identified
 
-We can quickly look at this using some simple maths and then a piece of code. 
+We can quickly look at this using some simple maths and then a piece of code. Here we use some exmaple data showing whether an animal is diseased or not and if it tested positive by a diagnostic test.
 
 |         | Disease   | No Disease |
 |---------|-----------|------------|
 | Positive| 75        | 10         |
 | Negative| 25        | 90         |
+
+We can calculate the **sensitivity** and **specificity** by:
 
 *Sensitivity* = $\frac{TP}{TP + FN}$ = $\frac{75}{75 + 25}$ = 0.75
 
@@ -245,7 +247,7 @@ conf.level = 0.95)
 summary(rval.tes02)
 ```
 
-This provides a huge amount of information on the tests. 
+This provides a large amount of information on the tests and data. 
 
 The **apparent prevalence (ap)** is what the test results show.
 But the **true prevalence (tp)** accounts for the test specificity and sensitivity, where:
@@ -292,7 +294,7 @@ In the context of AUC here, the curve refers to the ROC curve. The ROC curve is 
 
 The AUC is calculated by computing the integral of the ROC curve. It ranges from 0 to 1, where an AUC of 0.5 indicates a model with no discrimination ability (random guessing), and an AUC of 1 represents a perfect classifier that can perfectly separate positive and negative samples.
 
-Interpreting the AUC value is straightforward. The higher the AUC, the better the model's ability to classify positive and negative samples accurately. An AUC of 0.5 indicates a model that performs no better than chance, while values above 0.5 indicate better-than-chance performance. An AUC of 1 suggests a model with flawless discrimination.
+Interpreting the AUC value is, therefore, relatively straightforward. The higher the AUC, the better the model's ability to classify positive and negative samples accurately. 
 
 We can simply read the values, but to simplify this, let's get the best **threshold**, specificity and sensitivity:
 
@@ -317,9 +319,10 @@ plot(ci(rocobj2, of = "thresholds", thresholds = "best")) # add one threshold
 
 ```
 
-Notice two things:
-* first, that this has a higher AUC so if this were a real test and we were comparing it to the previous analysis, this would be *better*.
-* second, note that there are **two** *threshold* possibilities! Let's see those:
+Notice three things:
+* first, that this has a higher AUC than the other example, so if this were a real test and we were comparing it to the previous analysis, this would be *better*;
+* second, notice the blue shaded area is larger; this means that there is less certainty;
+* third, note that there are **two** *threshold* possibilities! Let's see those:
 
 ```{r}
 coords(rocobj2,'best')
@@ -372,11 +375,11 @@ Last in this session, we will see what happens if we do not know what the **trut
 
 A mixed model can be used to find the cut offs between two **bimodal distribution peaks**. 
 
-In this case, the mixed model would involve fitting two *Gaussian distributions* or *normal* distributions to the data, with each distribution corresponding to one of the bimodal peaks. The means and standard deviations of each distribution would be modeled as fixed effects, while the within-subject variability would be modeled as a random effect.
+In this case, the mixed model involves fitting two *Gaussian distributions* or *normal* distributions to the data, with each distribution corresponding to one of the bimodal peaks. The means and standard deviations of each distribution would be modeled as fixed effects, while the within-subject variability would be modeled as a random effect.
 
-The mixed model would also include a binary variable indicating which of the two distributions each observation belongs to. The cut off point between the two distributions would be estimated as the point where the probability of belonging to each distribution is equal.
+The mixed model also includes a binary variable indicating which of the two distributions each observation belongs to. The cut off point between the two distributions is estimated as the point where the probability of belonging to each distribution is equal.
 
-The mixed model would be fit using **maximum likelihood** estimation, and model selection methods such as **Akaike's Information Criterion** (AIC) or **Bayesian** methods and **Bayesian Information Criterion** (BIC) could be used to determine the best model. We will cover these better in **Session 7**
+Mixed models can be fit using **maximum likelihood** estimation, and model selection by methods such as **Akaike's Information Criterion** (AIC) or **Bayesian** methods and **Bayesian Information Criterion** (BIC) could be used to determine the best model. We will cover these better in **Session 7**.
 
 Once the model is fit, the cut off point between the two bimodal peaks can be estimated, along with confidence intervals or credible intervals. This information can then be used to identify the groups or subgroups within the data that correspond to each of the bimodal peaks, and to further explore the differences between these groups or subgroups.
 
